syntax = "proto3";

package cs332.protos;

service Sorter {
    rpc getWorkerPivots (stream PivotRequest) returns (PivotResponse) {}
    rpc sayHello (HelloRequest) returns (HelloReply) {}
    
}

message HelloRequest {
    string name = 1;
}
  
message HelloReply {
    string message = 1;
}
  

message Metadata {
    string fileName = 1;
    string fileType = 2;
}
  
message FileMessage {
    bytes content = 1;
}

enum Status {
    PENDING = 0;
    IN_PROGRESS = 1;
    SUCCESS = 2;
    FAILED = 3;
}

message PivotRequest {
    Metadata metadata = 1;
    FileMessage file = 2;
}
  
  message PivotResponse {
    Status status = 1;
}